[package]
name = "tokenizer"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
fs2 = "0.4"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
walkdir = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
